# bna-api

./: .gitignore  .markdownlint.yml  Cargo.toml  README.md  _typos.toml  bacon.toml  code-of-conduct.md  docker-compose.yml  justfile  openapi-3.0.yaml  openapi-3.1.yaml  openapi.yaml  words.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  help_request.yml
.github/workflows/: bnaclient.yml  ci-rust.yml  deployment-production.yml  deployment-staging.yml  effortless.yml  integration.yml  lambdas.yml  migration.yml
bnaclient/: CHANGELOG.md  Cargo.toml
bnaclient/src/: lib.rs
docker/: servers.json
docs/: database.dbml  database.sql
effortless/: Cargo.toml  README.md
effortless/src/: api.rs  error.rs  fragment.rs  lib.rs  response.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: approval_status.rs  bike_lane_type.rs  bna.rs  bna_pipeline.rs  bna_pipeline_status.rs  bna_pipeline_step.rs  bna_region.rs  brokenspoke_pipeline.rs  brokenspoke_status.rs  brokenspoke_step.rs  census.rs  city.rs  community_survey.rs  core_services.rs  country.rs  fargate_price.rs  features.rs  infrastructure.rs  measure.rs  mod.rs  opportunity.rs  people.rs  prelude.rs  ranking.rs  recreation.rs  retail.rs  sea_orm_active_enums.rs  speed_limit.rs  state_region_crosswalk.rs  state_speed_limit.rs  submission.rs  summary.rs  transit.rs  us_state.rs
entity/src/wrappers/: bna.rs  bna_pipeline.rs  brokenspoke_pipeline.rs  census.rs  city.rs  mod.rs  submission.rs
examples/: dbconnect.rs  importer-sample.csv  query.rs  sample.csv  seeder-city_fips_speed-v24.03.csv  seeder-city_fips_speed.csv  seeder-state_fips_speed.csv  seeder-state_region_crosswalk-v24.05.csv  seeder.rs
lambdas/: Cargo.toml  README.md  requests.rest
lambdas/examples/: dbconnect.rs  list-bna-s3-folder.rs
lambdas/src/: axumify.rs  db.rs  lib.rs  link_header.rs  main.rs
lambdas/src/bnas/: get-bnas-analysis.rs  get-bnas-cities.rs  get-bnas.rs  mod.rs  post-bnas-analysis.rs  post-bnas.rs
lambdas/src/bnas-analysis/: get-bnas-analysis.rs  patch-bnas-analysis.rs  post-bnas-analysis.rs
lambdas/src/bnas-enqueue/: post-bnas-enqueue.rs
lambdas/src/bnas-results/: get-bnas-results.rs
lambdas/src/cities/: adaptor.rs  db.rs  endpoint.rs  get-cities-bnas.rs  get-cities-census.rs  get-cities-ratings.rs  get-cities-submissions.rs  get-cities.rs  mapper.rs  mod.rs  patch-cities-submissions.rs  post-cities-submissions.rs  post-cities.rs
lambdas/src/cities-submissions/: get-cities-submissions.rs  patch-cities-submissions.rs  post-cities-submissions.rs
lambdas/src/city/: get-cities.rs  get-city.rs
lambdas/src/core/: link_header.rs  mod.rs
lambdas/src/core/resource/: mod.rs  schema.rs
lambdas/src/core/resource/cities/: adaptor.rs  db.rs  endpoint.rs  mod.rs  schema.rs
lambdas/src/core/resource/pipelines/: adaptor.rs  db.rs  endpoint.rs  mod.rs  schema.rs
lambdas/src/core/resource/price/: adaptor.rs  db.rs  endpoint.rs  mod.rs  schema.rs
lambdas/src/core/resource/ratings/: adaptor.rs  db.rs  endpoint.rs  mod.rs  schema.rs
lambdas/src/core/resource/reports/: adaptor.rs  db.rs  endpoint.rs  mod.rs  schema.rs
lambdas/src/core/resource/system/: endpoint.rs
lambdas/src/core/resource/usstates/: adaptor.rs  db.rs  endpoint.rs  mod.rs  schema.rs
lambdas/src/enqueue/: post-city.rs
lambdas/src/fixtures/: api-gateway-payload-format-v2.json  get-bna_results.json  get-bnas-bna_id.json  get-bnas-event.json  get-bnas.json  get-cities-bnas-bna_id.json  get-cities-bnas.json  get-cities-city_id.json  get-cities-submissions-filtered.json  get-cities.json  get-city.json  get-request.json  get-submissions-submission_id.json  get-submissions.json  post-enqueue-city.json  post-submissions-city.json  post-submissions.json
lambdas/src/price-fargate/: get-price-fargate.rs
lambdas/src/ratings/: adaptor.rs  db.rs  endpoint.rs  get-ratings-analysis.rs  get-ratings.rs  mod.rs  patch-ratings-analysis.rs  post-ratings-analysis.rs
lambdas/src/submissions/: post-submissions-city.rs
lambdas/tests/: README.md  bnas.hurl  cities.hurl  database-with-test-data.sql  justfile  localhost.vars  openapi.yml  pyproject.toml  requirements.txt  sample-all-25.01.csv  staging.vars  tests.hurl
lambdas/tests/endpoints/: bnas.hurl  cities.hurl  pricing.hurl  ratings.hurl  reports.hurl  system.hurl  usstates.hurl
lambdas/tests/scenario/: bna-pipeline.hurl  pagination.hurl
lambdas/tests/smoke/: public-readonly.hurl  public.hurl
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_main.rs  m20231010_232527_city_submission.rs  m20240202_004130_brokenspoke_analyzer_pipeline.rs  m20250529_151932_measure.rs  m20260312_183218_2026_city_changes.rs
