[package]
name = "bna-api"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["bnaclient", "lambdas", "entity", "migration", "effortless"]

[workspace.dependencies]
async-std = "1"
aws_lambda_events = "1.0.1"
aws-config = "1.8.11"
aws-sdk-s3 = "1.116.0"
aws-sdk-sqs = "1.90.0"
axum = "0.8.7"
axum-extra = "0.12.2"
axum-streams = "0.24.0"
bnacore = { git = "https://github.com/PeopleForBikes/brokenspoke", rev = "87a367b" }
bon = "3.8.1"
chrono = "0.4.42"
color-eyre = "0.6.5"
csv = "1.4.0"
dotenv = "0.15.0"
entity = { path = "entity" }
futures = "0.3.31"
http-serde = "2.0.0"
itertools = "0.14.0"
lambda_http = "1.0.1"
lambda_runtime = "1.0.1"
migration = { path = "migration" }
nom = "7.1.3"
once_cell = "1.21.3"
query_map = "0.7.0"
reqwest = "0.12.25"
rstest = "0.26.1"
sea-orm = "1.1.19"
sea-orm-macros = "1.1.19"
sea-orm-migration = "1.1.19"
sea-query = "0.32.7"
serde = "1.0.228"
serde_json = "1.0.145"
serde_plain = "1.0.2"
serde_with = "3.16.1"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
tower-http = "0.6.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", default-features = false }
url = "2.5.7"
urlencoding = "2.1.3"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.19.0"

[dependencies]
color-eyre = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
entity = { workspace = true }
futures = { workspace = true }
http-serde = { workspace = true }
lambda_http = { workspace = true }
migration = { workspace = true }
once_cell = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
bnacore = { workspace = true }
csv = { workspace = true }
itertools = { workspace = true }
time = { workspace = true, features = ["formatting"] }
