[package]
name = "bna-api"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["bnaclient", "lambdas", "entity", "migration", "effortless"]

[workspace.dependencies]
async-std = "1"
aws_lambda_events = "1.0.3"
aws-config = "1.8.12"
aws-sdk-s3 = "1.121.0"
aws-sdk-sqs = "1.92.0"
axum = "0.8.8"
axum-extra = "0.12.5"
axum-streams = "0.24.0"
bnacore = { git = "https://github.com/PeopleForBikes/brokenspoke", rev = "d989124" }
bon = "3.8.2"
chrono = "0.4.43"
color-eyre = "0.6.5"
csv = "1.4.0"
dotenv = "0.15.0"
entity = { path = "entity" }
futures = "0.3.32"
http-serde = "2.0.0"
itertools = "0.14.0"
lambda_http = "1.0.2"
lambda_runtime = "1.0.2"
migration = { path = "migration" }
nom = "7.1.3"
once_cell = "1.21.3"
query_map = "0.7.0"
reqwest = "0.13.1"
rstest = "0.26.1"
sea-orm = "1.1.19"
sea-orm-macros = "1.1.19"
sea-orm-migration = "1.1.19"
sea-query = "0.32.7"
serde = "1.0.228"
serde_json = "1.0.149"
serde_plain = "1.0.2"
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = "1.49.0"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false }
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.21.0"

[dependencies]
color-eyre = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
entity = { workspace = true }
futures = { workspace = true }
http-serde = { workspace = true }
lambda_http = { workspace = true }
migration = { workspace = true }
once_cell = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
bnacore = { workspace = true }
csv = { workspace = true }
itertools = { workspace = true }
time = { version = "0.3.45", features = ["formatting"] }

[profile.release]
# Optimize for size instead of speed
opt-level = "z"

# Enable Link-Time Optimization
lto = true

# Use single codegen unit for better optimization
codegen-units = 1

# Strip all symbols from binary
strip = true

# Enable panic abort instead of unwinding
panic = "abort"

# Reduce debug info
debug = false

# Optimize for size in dependencies too
[profile.release.package."*"]
opt-level = "z"
strip = true
