[package]
name = "bnaclient"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.0"
chrono = { workspace = true, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.9.1"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
uuid = { workspace = true, features = ["serde", "v4"] }
