[package]
name = "bnaclient"
version = "1.4.1"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.11"
chrono = { workspace = true, features = ["serde"] }
futures-core = "0.3"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor", rev = "7c28b25" }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
uuid = { workspace = true, features = ["serde", "v4"] }
