[package]
name = "effortless"
version = "0.1.0"
edition = "2021"

[lib]
name = "effortless"
path = "src/lib.rs"

[dependencies]
bon = { workspace = true }
http-serde = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }

[lints.clippy]
result_large_err = "allow"
