[package]
name = "lambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws_lambda_events = { workspace = true }
axum = { workspace = true }
bnacore = { git = "https://github.com/PeopleForBikes/brokenspoke.git", rev = "f1d9115" }
dotenv = { workspace = true }
effortless = { path = "../effortless" }
entity = { path = "../entity" }
http-serde = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[lib]
name = "lambdas"
path = "src/lib.rs"

[[bin]]
name = "get-ratings"
path = "src/ratings/get-ratings.rs"

[[bin]]
name = "post-ratings"
path = "src/ratings/post-ratings.rs"

# [[bin]]
# name = "patch-bnas"
# path = "src/bnas/patch-bnas.rs"

[[bin]]
name = "get-ratings-cities"
path = "src/ratings/get-ratings-cities.rs"

[[bin]]
name = "get-ratings-analysis"
path = "src/ratings/get-ratings-analysis.rs"

[[bin]]
name = "get-cities"
path = "src/cities/get-cities.rs"

[[bin]]
name = "get-cities-ratings"
path = "src/cities/get-cities-ratings.rs"

[[bin]]
name = "get-cities-census"
path = "src/cities/get-cities-census.rs"

[[bin]]
name = "get-cities-submissions"
path = "src/cities/get-cities-submissions.rs"

[[bin]]
name = "get-price-fargate"
path = "src/price-fargate/get-price-fargate.rs"

[[bin]]
name = "patch-ratings-analysis"
path = "src/ratings/patch-ratings-analysis.rs"

[[bin]]
name = "patch-cities-submissions"
path = "src/cities/patch-cities-submissions.rs"

[[bin]]
name = "post-cities-submissions"
path = "src/cities/post-cities-submissions.rs"

[[bin]]
name = "post-ratings-analysis"
path = "src/ratings/post-ratings-analysis.rs"

[[bin]]
name = "post-ratings-enqueue"
path = "src/ratings/post-ratings-enqueue.rs"

[[bin]]
name = "get-ratings-results"
path = "src/ratings/get-ratings-results.rs"

[[bin]]
name = "post-cities"
path = "src/cities/post-cities.rs"

[dev-dependencies]
color-eyre = { workspace = true }
rstest = { workspace = true }

[package.metadata.lambda.deploy]
memory = 128
timeout = 10
tracing = "active"
layers = [
  "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension:4",
]
