[package]
name = "lambdas"
version = "1.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "original-uri", "query"] }
axum-extra = { workspace = true, features = ["query"] }
axum-streams = { workspace = true, features = ["csv"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws_lambda_events = { workspace = true }
bnacore = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
effortless = { path = "../effortless" }
entity = { path = "../entity" }
futures = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, features = [
  "charset",
  "http2",
  "json",
  "rustls",
] }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_plain = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true }
utoipa = { workspace = true, features = ["chrono", "decimal", "uuid", "yaml"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints.clippy]
result_large_err = "allow"
large_enum_variant = "allow"

[lib]
name = "lambdas"
path = "src/lib.rs"

[[bin]]
name = "axumed"
path = "src/main.rs"

[dev-dependencies]
color-eyre = { workspace = true }
rstest = { workspace = true }

[package.metadata.lambda.deploy]
memory = 128
timeout = 10
tracing = "active"
layers = [
  "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension:24",
]
